Fixed backspace highlight bug when jumping to previous line. Added fallback to local storage for poem if api call fails. Added statistics dom elements and childs. Implemented statistics hide and show after test finished and on test start

--- a/css/main.css
+++ b/css/main.css
@@ -50,6 +50,10 @@ footer {
   margin-left: 20vw;
   margin-right: 20vw;
 }
+#statistics {
+  display: none;
+  min-height: 500px;
+}
 button {
   border-radius: 1rem;
   min-height: 30px;
